--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,13 +1,4 @@
-###
- # @Author: liqijiang 3045273238@qq.com
- # @Date: 2023-09-08 11:15:54
- # @LastEditors: yilaisai
- # @LastEditTime: 2024-08-26 11:16:23
- # 后端本地地址192.168.0.151:84
- # 开发环境：http://192.168.0.99
- # @FilePath: \management-bg\env\.env.dev
-### 
+
 VITE_MODE=DEV
-# VITE_AUTH_PATH='http://192.168.0.99:84'
-# VITE_AUTH_PATH='https://as-sa.opkdemo.com'
-VITE_AUTH_PATH='https://sa.lytzht.com'
+VITE_AUTH_PATH='http://3.94.96.121'
+
