--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.0",
     "@vue/compiler-sfc": "^3.1.2",
+    "devtools-detector": "^2.0.25",
     "qrcode": "^1.5.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "unplugin-auto-import": "^0.16.4",
