--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "axios": "^0.27.2",
     "decimal.js": "^10.4.3",
     "default-passive-events": "^2.0.0",
+    "devtools-detector": "^2.0.25",
     "echarts": "^5.4.3",
     "element-plus": "^2.2.14",
+    "lodash": "^4.17.21",
     "md-editor-v3": "^2.2.1",
     "pinia": "^2.0.20",
     "qs": "^6.11.2",
     "sass": "^1.62.1",
+    "tinymce": "^7.1.1",
     "vue": "^3.2.37",
     "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.1.3",
-    "xlsx": "^0.18.5",
-    "tinymce": "^7.1.1",
-    "lodash": "^4.17.21"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^4.1.1",
